sfSandBoxCode/force-app/main/default/objects/BSF_Goods_In__c/BSF_Goods_In__c.object-meta.xml
<CustomObject>
    <description>Store data of BSF feeds</description>
    <label>BSF Goods In</label>
    <nameField>
        <label>BSF Goods In Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BSF Goods In</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>