sfSandBoxCode/force-app/main/default/objects/BSF_Goods_In__c/fields/Accepted_input__c.field-meta.xml
<CustomField>
    <fullName>Accepted_input__c</fullName>
    <description>accepted quantity</description>
    <inlineHelpText>Numerical value of KGs</inlineHelpText>
    <label>Accepted input(KG)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>