sfSandBoxCode/force-app/main/default/objects/BSF_Goods_In__c/fields/Accepted_input_percent__c.field-meta.xml
<CustomField>
    <fullName>Accepted_input_percent__c</fullName>
    <formula>Accepted_input__c / Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accepted input(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>