sfSandBoxCode/force-app/main/default/objects/BSF_Goods_In__c/fields/Rejected__c.field-meta.xml
<CustomField>
    <fullName>Rejected__c</fullName>
    <formula>Rejected_input_KGs__c /  Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rejected(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>