sfSandBoxCode/force-app/main/default/objects/BSF_Goods_In__c/fields/Rejected_input_KGs__c.field-meta.xml
<CustomField>
    <fullName>Rejected_input_KGs__c</fullName>
    <formula>Weight__c - Accepted_input__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rejected input(KGs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>