sfSandBoxCode/force-app/main/default/objects/BSF_Goods_In__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight(KGs)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>